Add title and Google Analytics tracking to app.html

--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,19 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<title>Brainbird</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/images/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-NJE8P8Q0PZ"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-NJE8P8Q0PZ');
+		</script>
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6570843648022285" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
